# itmo-cg

./: .gitignore  CMakeUserPresets.json
.github/workflows/: build_cmake.yml
src/App/: CMakeLists.txt  Window.cpp  Window.h  resources.qrc
src/App/Shaders/: fragment.glsl  vertex.glsl
